tests/sksl/errors/LayoutInFunctions.glsl
### Compilation failed:

error: 15: layout qualifier 'origin_upper_left' is not permitted here
error: 15: layout qualifier 'push_constant' is not permitted here
error: 15: layout qualifier 'blend_support_all_equations' is not permitted here
error: 15: layout qualifier 'srgb_unpremul' is not permitted here
error: 15: layout qualifier 'location' is not permitted here
error: 15: layout qualifier 'offset' is not permitted here
error: 15: layout qualifier 'binding' is not permitted here
error: 15: layout qualifier 'index' is not permitted here
error: 15: layout qualifier 'set' is not permitted here
error: 15: layout qualifier 'builtin' is not permitted here
error: 15: layout qualifier 'input_attachment_index' is not permitted here
error: 15: layout qualifier 'max_vertices' is not permitted here
error: 15: layout qualifier 'invocations' is not permitted here
error: 31: layout qualifier 'origin_upper_left' is not permitted here
error: 31: layout qualifier 'push_constant' is not permitted here
error: 31: layout qualifier 'blend_support_all_equations' is not permitted here
error: 31: layout qualifier 'srgb_unpremul' is not permitted here
error: 31: layout qualifier 'location' is not permitted here
error: 31: layout qualifier 'offset' is not permitted here
error: 31: layout qualifier 'binding' is not permitted here
error: 31: layout qualifier 'index' is not permitted here
error: 31: layout qualifier 'set' is not permitted here
error: 31: layout qualifier 'builtin' is not permitted here
error: 31: layout qualifier 'input_attachment_index' is not permitted here
error: 31: layout qualifier 'max_vertices' is not permitted here
error: 31: layout qualifier 'invocations' is not permitted here
26 errors
